# xiaohongshu-cli

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.playwright-mcp/: connections_requests.txt  notif_page_requests.txt  notification_requests.txt
tests/: test_cli.py  test_client.py  test_cookies.py  test_creator_signing.py  test_formatter.py  test_integration.py  test_signing.py  test_smoke.py
xhs_cli/: __init__.py  __main__.py  cli.py  client.py  client_mixins.py  constants.py  cookies.py  creator_signing.py  exceptions.py  formatter.py  formatter_renderers.py  qr_login.py  signing.py
xhs_cli/commands/: auth.py  creator.py  interactions.py  reading.py  social.py
